# newmat

./: CMakeLists.txt  newmat6.cpp
